--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -191,6 +191,7 @@
 
   "realCard_title": "Apply Physical Card",
   "realCard_card_title": "Physical Card",
+  "realCard_card_bind": "Bind Card",
   "realCard_fee": "There is a ${fee} fee to apply physical card. Please top up first.",
   "realCard_status1": "Pending",
   "realCard_status2": "Approved",
