--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -191,6 +191,7 @@
 
   "realCard_title": "申請實體卡",
   "realCard_card_title": "實體卡",
+  "realCard_card_bind": "绑定實體卡",
   "realCard_fee": "申請實體卡有{fee}元的費用，請先充值。",
   "realCard_status1": "覆核中", 
   "realCard_status2": "覆核通過",
