Updated the tip and icon

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -223,7 +223,7 @@
 
   "bindCard_title": "Bind Physical Card",
   "bindCard_cardNo": "Card Number",
-  "bindCard_mobile": "Phone",
+  "bindCard_mobile": "Phone Number",
   "bindCard_cid": "CID",
 
   "alert_title": "Message",
