--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -275,5 +275,6 @@
   "tips_needFiveDollarFee": "There is a fee of ${createCardFee} to apply for a virtual card. \n The USD is insufficient, please click Deposit on the Home page to purchase USDT and then exchange it for USD.",
   "tips_codeIsOnClipboard": "Invitation Code is on your clipboard.",
   "tips_sendTokenError": "Please deposit enough ETH as gas fee.",
+  "tips_logout": "Are you sure you want to logout？",
   "tips_WithdrawResult": "Will get ${amount} and fee is ${fee}."
 }
