--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -275,5 +275,6 @@
   "tips_needFiveDollarFee": "申請虛擬卡需要支付 {createCardFee} 美元的費用。\n美元不足,請點擊首頁的存款購買 USDT,然後兌換為美元。",
   "tips_codeIsOnClipboard": "邀請碼已複製到剪貼板。",
   "tips_sendTokenError": "請存入足夠的 ETH 作為手續費。",
+  "tips_logout": "確定要登出嗎？",
   "tips_WithdrawResult": "將獲得 {amount},手續費為 {fee}"
 }
