--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -193,6 +193,7 @@
   "realCard_apply": "Apply",
   "realCard_card_title": "Physical Card",
   "realCard_card_bind": "Bind",
+  "realCard_card_active": "Active",
   "realCard_fee": "There is a ${fee} fee to apply physical card. Please top up first.",
   "realCard_status1": "Pending",
   "realCard_status2": "Approved",
