Updated the title of deposit to card

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -84,7 +84,7 @@
 
   "selectCard_title": "Pick up favorite card",
 
-  "send_title1": "Withdraw to Card",
+  "send_title1": "Deposit to Card",
   "send_title2": "Deposit to Card",
   "send_Withdraw": "withdraw",
   "send_Deposit": "deposit",
