--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,6 +38,7 @@
   "applyCard_Desc1": "Our new virtual card allows you to：",
   "applyCard_Desc2": "- Pay conveniently for online transactions \n- Exchange Currencies & Crypto \n- Send & Receive",
   "applyCard_Desc3": "*** There is a fee of ${createFee} to apply for a virtual card.",
+  "applyCard_Desc4": "*** There is a fee of ${createFee} to apply for a physical card.",
   "applyCard_ApplyLater": "APPLY LATER",
   "applyCard_ApplyCard": "Apply Virtual Card",
 
@@ -213,7 +214,7 @@
   "realCard_shipAddress_home": "Home Address",
   "realCard_shipAddress_company": "Company Address",
   "realCard_tips_uploadImage": "Please upload correct image",
-  "realCard_open_fee_desc": "开卡费用说明{fee}",
+  "realCard_open_fee_desc": "A fee of ${fee} is required to apply for the physical card.",
 
   "realCard_Step2_title": "Card Shipping Address",  
   "realCard_Step2_phone": "Phone Number",
