--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -38,6 +38,7 @@
   "applyCard_Desc1": "我們的新虛擬卡片允許您:",
   "applyCard_Desc2": "- 方便線上交易支付 \n- 兌換貨幣和加密貨幣 \n- 發送和接收",
   "applyCard_Desc3": "*** 申請虛擬卡片需要支付 {createFee} 美元的費用。",
+  "applyCard_Desc4": "*** 申請實體卡片需要支付 {createFee} 美元的費用。",
   "applyCard_ApplyLater": "稍後申請",
   "applyCard_ApplyCard": "申請虛擬卡",
 
@@ -213,7 +214,7 @@
   "realCard_shipAddress_home": "家庭地址",
   "realCard_shipAddress_company": "公司地址",  
   "realCard_tips_uploadImage": "請上傳正確的圖片",  
-  "realCard_open_fee_desc": "开卡费用说明{fee}",
+  "realCard_open_fee_desc": "申請實體卡需要支付{fee}美元",
 
   "realCard_Step2_title": "卡片寄送地址",     
   "realCard_Step2_phone": "手機號", 
