Updated the tips

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -70,11 +70,12 @@
   "txHistory_Exchange": "Exchange",
   "txHistory_Send": "Send",
 
-  "kyc_title": "Kyc",
-  "kyc_id_tips_china": "kyc_id_tips_china",
-  "kyc_id_tips_otherArea": "kyc_id_tips_otherArea",
+  "kyc_title": "KYC",
+  "kyc_id_tips_china": "Currently only supports Mainland China",
+  "kyc_id_tips_otherArea": "Supports 128 countries worldwide",
   "kyc_dateOfBirth": "Date of birth",
   "kyc_tips1": "Please input English and Number.",
+  "kyc_PassportId": "Passport Id",
   "kyc_IdentityId": "Identity Id",
   "kyc_FirstName": "First Name",
   "kyc_LastName": "Last Name",
@@ -205,8 +206,8 @@
   "realCard_idCardNum": "ID Card Number", 
   "realCard_firstName": "First Name (Pinyin)",
   "realCard_lastName": "Last Name (Pinyin)",
-  "realCard_chinaIdCard": "Mainland China ID Card",
-  "realCard_otherIdCard": "Hong Kong, Macau, Taiwan or Foreign Passport",
+  "realCard_chinaIdCard": "ID Card",
+  "realCard_otherIdCard": "Passport",
   "realCard_gender_male": "Male", 
   "realCard_gender_female": "Female",
   "realCard_marry_no": "Unmarried",
