--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -71,10 +71,11 @@
   "txHistory_Send": "轉账",
 
   "kyc_title": "認證",
-  "kyc_id_tips_china": "kyc_id_tips_china",
-  "kyc_id_tips_otherArea": "kyc_id_tips_otherArea",
+  "kyc_id_tips_china": "目前僅支持中國大陸",
+  "kyc_id_tips_otherArea": "支持全球128个國家",
   "kyc_dateOfBirth": "出生日期",
   "kyc_tips1": "請輸入英文和數字。",
+  "kyc_PassportId": "護照號碼",
   "kyc_IdentityId": "身分證號",
   "kyc_FirstName": "名字",
   "kyc_LastName": "姓氏",
@@ -205,8 +206,8 @@
   "realCard_idCardNum": "身份證號",  
   "realCard_firstName": "姓氏拼音",
   "realCard_lastName": "名字拼音",
-  "realCard_chinaIdCard": "中國大陸身份證", 
-  "realCard_otherIdCard": "香港、澳門、台灣或外國護照", 
+  "realCard_chinaIdCard": "身份證", 
+  "realCard_otherIdCard": "護照", 
   "realCard_gender_male": "男",  
   "realCard_gender_female": "女", 
   "realCard_marry_no": "未婚", 
