--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -196,10 +196,10 @@
   "realCard_title": "申請實體卡",
   "realCard_apply": "申請",
   "realCard_card_title": "實體卡",
-  "realCard_card_bind": "绑定",
+  "realCard_card_bind": "綁定",
   "realCard_card_active": "激活",
   "realCard_card_active_title": "激活實體卡",
-  "realCard_card_active_tips": "验证码会发送到你的邮箱\n{email}",
+  "realCard_card_active_tips": "驗證碼會寄到你的信箱\n{email}",
   "realCard_fee": "申請實體卡有{fee}元的費用，請先充值。",
   "realCard_status1": "覆核中", 
   "realCard_status2": "覆核通過",
@@ -219,8 +219,8 @@
   "realCard_shipAddress_home": "家庭地址",
   "realCard_shipAddress_company": "公司地址",  
   "realCard_tips_uploadImage": "請上傳正確的圖片",  
-  "realCard_open_fee_desc": "申請實體卡需要支付{fee}美元，请确认。",
-  "realCard_open_balance_not_enough": "需要支付{fee}美元，余额不足，请充值。",
+  "realCard_open_fee_desc": "申請實體卡需支付{fee}美元，請確認。",
+  "realCard_open_balance_not_enough": "需支付{fee}美元，餘額不足，請儲值。",
 
   "realCard_Step2_title": "卡片寄送地址",     
   "realCard_Step2_phone": "手機號", 
