Updated the buttons name

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,7 +20,7 @@
   "common_Deposit": "Deposit",
   "common_Withdraw": "Withdraw",
   "common_Exchange": "Exchange",
-
+  "common_recharge2card": "Recharge to Card",
 
   "login_Welcome": "Welcome",
   "login_Desc": "",
