--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -20,6 +20,7 @@
   "common_Deposit": "存款",
   "common_Withdraw": "提款",
   "common_Exchange": "兌換",
+  "common_recharge2card": "充值到卡",
 
 
   "login_Welcome": "歡迎",
