--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -99,6 +99,7 @@
   "main_home_Card": "Card",
   "main_home_Crypto": "Crypto",
   "main_home_Shop": "Shop",
+  "main_home_agent": "Agent",
   "main_home_Profile": "Profile",
 
   "card_home_title": "Home",
