--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -100,6 +100,7 @@
   "main_home_Card": "卡片",
   "main_home_Crypto": "加密貨幣",
   "main_home_Shop": "商店",
+  "main_home_agent": "代理",
   "main_home_Profile": "個人資料",
 
   "card_home_title": "首頁",
