--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -247,6 +247,9 @@
   "agent_kyc": "Agent to Physical Card",
   "agent_card_active": "Active",
   "agent_card_inactive": "Click to Active",
+  "agent_card_list_all": "All({count})",
+  "agent_card_list_active": "Active({count})",
+  "agent_card_list_inactive": "Inactive({count})",
 
   "tips_WrongEmail": "Wrong email",
   "tips_WrongTxid": "Wrong txid",
