--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -247,6 +247,9 @@
   "agent_kyc": "代理申請實體卡",
   "agent_card_active": "已激活",
   "agent_card_inactive": "點擊去激活",
+  "agent_card_list_all": "所有({count})",
+  "agent_card_list_active": "已激活({count})",
+  "agent_card_list_inactive": "未激活({count})",
 
   "tips_WrongEmail": "錯誤的郵件",
   "tips_WrongTxid": "錯誤的交易 ID",
