--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -244,7 +244,8 @@
   "alert_ok": "OK",
   "alert_cancel": "Cancel",
 
-  "agent_kyc": "Agent to Physical Card",
+  "agent_kyc": "NEW KYC AND APPLY",
+  "agent_kyc_history": "KYC history",
   "agent_card_active": "Active",
   "agent_card_inactive": "Click to Active",
   "agent_card_list_all": "ALL({count})",
