update the text

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -30,7 +30,7 @@
   "login_SignUp": "Sign Up",
   "forgetPsw_Title": "Forgot Password",
 
-  "card_newPsw":"Card New Password",
+  "card_newPsw":"Password",
 
   "signUp_Title": "Sign Up",
   "signUp_Nickname": "Nickname",
