--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -178,6 +178,7 @@
   "shop_nft_Chain": "Chain",
   "shop_nft_tx_history_title": "NFT Tx History",
 
+  "profile_home_agent": "Agent",
   "profile_home_InvitationCode": "My Invitation Code",
   "profile_home_MyUsers": "My Users",
   "profile_home_MyReward": "My Reward",
